--- a/css/style.css
+++ b/css/style.css
@@ -39,29 +39,5 @@ body::before {
   margin: 0 auto;
 }
 
-.my-toggles {
-  width: 46px;
-  height: 22px;
-  border-radius: 100px;
-  background: linear-gradient(to right, hsl(210, 78%, 56%) , hsl(146, 68%, 55%));
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-.my-toggles::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translate(-50%, -50%);
-  background-color: hsl(228, 28%, 20%);
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  transition: all 150ms linear;
-}
-.my-toggles.active::before {
-  left: calc(100% - 12px);
-  background-color: hsl(225, 100%, 98%);
-}
+
 
